<resources>

    <string name="app_name">RAN</string>

    <!-- Strings related to Sign In/Up -->
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_in">Sign In</string>
    <string name="do_not_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_account">Create Account</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email completions.</string>

    <!-- Strings related to Internet Connectivity -->
    <string name="no_connection">No Connection</string>
    <string name="check_your_internet">Please check your internet connection and try again</string>
    <string name="try_again">Try Again</string>
    <string name="click_here">Click here to check your internet settings</string>

    <!-- Strings related to Main -->
    <string name="open_navigation_drawer">Open navigation drawer</string>
    <string name="close_navigation_drawer">Close navigation drawer</string>
    <string name="book_ride">Book Ride</string>
    <string name="profile">Profile</string>
    <string name="trips">Trips</string>
    <string name="faqs">FAQs</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="send_feedback">Send feedback</string>

    <!-- Strings related to Notifications -->
    <string name="notifications">Notifications</string>

    <!-- Strings related to Book Ride -->
    <string name="college">College</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="drop_location">Drop Location</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="seats">Seats</string>
    <string name="book_ride_share">SHARE</string>
    <string name="select_cab">Select Cab</string>

    <!-- Strings related to Select Cab -->
    <string name="select_fare">Fare:</string>
    <string name="sorry_no_cabs_available_now">Sorry, No Cabs Available Now</string>

    <!-- Strings related to Confirm Ride -->
    <string name="seats_selected">seat(s) selected</string>
    <string name="proceed_to_pay">PROCEED TO PAY</string>
    <string name="fare">Fare</string>
    <string name="convenience_fee_and_taxes">Convenience Fee and Taxes</string>

    <!-- Strings related to Cab Booked -->
    <string name="payment_success_text1">Thanks for making the payment.\nYour CRN is #</string>
    <string name="payment_success_text2">You can track the ride status by clicking \n the Trips section.</string>
    <string name="payment_success_text3">In case of any queries/concerns, please \n contact RAN help desk:</string>
    <string name="payment_success_phone">+91 9876543210</string>
    <string name="payment_success_happy_rating">Happy Journey!\n A Journey you\'ll never forget :)</string>

    <!-- Strings related to Profile -->
    <string name="edit_profile">Edit Profile</string>
    <string name="save_profile">Save Profile</string>
    <string name="alternate_number">Alternate Number</string>
    <string name="asterisks">********</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>

    <!-- Strings related to Trips -->
    <string name="crn">CRN:</string>

    <!-- Strings related to Trip details -->
    <string name="driver_info">Driver Info</string>
    <string name="cab_info">Cab Info</string>
    <string name="location_info">Location Info</string>
    <string name="payment_info">Payment Info</string>
    <string name="status">Status</string>
    <string name="seats_booked">Seats Booked</string>
    <string name="total_amount">Total Amount</string>

    <!-- Strings related to Faqs -->
    <string name="faqs_question_1">How much in advance can I book a ride?</string>
    <string name="faqs_answer_1">Depending on your travel date/time, you can book a ride up to 30 days in advance. The driver details for your ride will be sent 6 hours prior to your pickup time.</string>
    <string name="faqs_question_2">Additional fees &amp; charges applicable on the ride?</string>
    <string name="faqs_answer_2">The total estimated cost for your trip indicates the fare for kilometres travelled, duration of the ride, driver allowance and taxes (as applicable).\n\n
            Note - State taxes, Permits, Tolls or Parking Fee (if applicable) are included in your bill.</string>
    <string name="faqs_question_3">How do I leave a rating?</string>
    <string name="faqs_answer_3">You can leave a rating 24 hours after the ride from your Profile.\n\n
            First time leaving a rating? Here are a couple of tips:\n
            - Choose whether the person you’re rating was the driver or passenger.\n
            - Select the adjective that best describes your experience.\n
            - Add a few personal words about the person’s promptness or music taste.\n\n
            If you want to share something that didn’t go well, just try and be as objective as possible. And, if it’s something you feel uncomfortable writing in a rating, you can always contact us.</string>
    <string name="faqs_question_4">Can I edit or delete a rating that I’ve left?</string>
    <string name="faqs_answer_4">You can’t edit or delete a rating that you’ve left. Your first impression of your experience travelling with a member is the most accurate. Not how you feel after seeing the rating this person left you.</string>

    <!-- Strings related to About -->
    <string name="share_app">Share App</string>
    <string name="content_about">We, RAN, are a start up fuelled with the intention to solve the practical problems around us. We observed that in our busy and bustling colleges that are brimming with technological advances, students have a hard time finding co-riders to share rides with if they are to travel by a rented car. This problem is a consequence of the apparently remote locations of our college which does not facilitate an availability of a quality car renting service. Moreover, a student\'s choice of mode of transport would depend a great deal on their finding co-riders so that their expenses can be cut. Well, we have a wonderful solution!</string>
    <string name="version_info">1.0.0</string>
    <string name="terms_and_conditions">Terms &amp; Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>

    <!-- Strings related to Feedback -->
    <string name="feedback_welcome">Found a bug? Have a suggestion? Please let us know about your query, our team will be in touch with you soon.</string>
    <string name="feedback_type">Feedback Type</string>
    <string name="feedback_category">Feedback Category</string>
    <string name="your_feedback">Your feedback</string>
    <string name="submit">Submit</string>
    <string name="thanking_you_for_sending_us_the_feedback">Thanking You for sending us the feedback.</string>
    <string name="we_are_continuously_working_to_improve_the_user_experience">We are continuously working to improve the user experience!</string>
    <string name="submit_another_feedback">Submit another Feedback</string>

</resources>
