<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_drawer_book_ride"
            android:icon="@drawable/ic_book_ride"
            android:title="@string/book_ride" />
        <item
            android:id="@+id/navigation_drawer_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/navigation_drawer_trips"
            android:icon="@drawable/ic_trips"
            android:title="@string/trips" />
        <item
            android:id="@+id/navigation_drawer_faqs"
            android:icon="@drawable/ic_faqs"
            android:title="@string/faqs" />
        <item
            android:id="@+id/navigation_drawer_logout"
            android:checkable="false"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/group_information">
        <item
            android:id="@+id/navigation_drawer_about"
            android:icon="@drawable/ic_about"
            android:title="@string/about" />
        <item
            android:id="@+id/navigation_drawer_feedback"
            android:icon="@drawable/ic_feedback"
            android:title="@string/send_feedback" />
    </group>
</menu>